# gradient-descent

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Grid.h  Shader.h
shaders/: grid.frag  grid.vert
src/: main.cpp
